cmake_minimum_required(VERSION 3.15)
project(leetcode)

add_definitions(-std=c++11)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(array)
add_subdirectory(link)
add_subdirectory(hashtable)
add_subdirectory(divide_and_conquer)
add_subdirectory(stack) 
add_subdirectory(Design)
add_subdirectory(tree)
add_subdirectory(str)
add_subdirectory(backtrace)
add_subdirectory(dp)
#add_subdirectory(depthfirstsearch)
add_subdirectory(sort)
