add_executable(TwoSum TwoSum.cc)
add_executable(MedianofTwoSortedArrays MedianofTwoSortedArrays.cc)
add_executable(1.two-sum 1.two-sum.cpp)
add_executable(26.remove-duplicates-from-sorted-array 26.remove-duplicates-from-sorted-array.cpp)
add_executable(80.remove-duplicates-from-sorted-array-ii 80.remove-duplicates-from-sorted-array-ii.cpp)
add_executable(128.longest-consecutive-sequence 128.longest-consecutive-sequence.cpp)
add_executable(15.3-sum 15.3-sum.cpp)
add_executable(16.3-sum-closest 16.3-sum-closest.cpp)
add_executable(18.4-sum 18.4-sum.cpp)
