add_executable(4.median-of-two-sorted-arrays 4.median-of-two-sorted-arrays.cpp)
add_executable(23.merge-k-sorted-lists 23.merge-k-sorted-lists.cpp)
add_executable(53.maximum-subarray 53.maximum-subarray.cpp)
add_executable(169.majority-element 169.majority-element.cpp)
add_executable(215.kth-largest-element-in-array 215.kth-largest-element-in-an-array.cpp)
add_executable(218.the-skyline-problem 218.the-skyline-problem.cpp)
add_executable(240.search-a-2-d-matrix-ii 240.search-a-2-d-matrix-ii.cpp)
add_executable(241.different-ways-to-add-parentheses 241.different-ways-to-add-parentheses.cpp)
#add_executable(1014.best-sightseeing-pair 1014.best-sightseeing-pair.cpp)
