add_executable(198.house-robber 198.house-robber.cpp)
add_executable(121.best-time-to-buy-and-sell-stock 121.best-time-to-buy-and-sell-stock.cpp)
add_executable(122.best-time-to-buy-and-sell-stock-ii 122.best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(123.best-time-to-buy-and-sell-stock-iii 123.best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(188.best-time-to-buy-and-sell-stock-iv 188.best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(309.best-time-to-buy-and-sell-stock-with-cooldown 309.best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(714.best-time-to-buy-and-sell-stock-with-transaction-fee 714.best-time-to-buy-and-sell-stock-with-transaction-fee.cpp)
add_executable(1143.longest-common-subsequence 1143.longest-common-subsequence.cpp)
add_executable(583.delete-operation-for-two-strings 583.delete-operation-for-two-strings.cpp)
add_executable(712.minimum-ascii-delete-sum-for-two-strings 712.minimum-ascii-delete-sum-for-two-strings.cpp)

add_executable(416.partition-equal-subset-sum 416.partition-equal-subset-sum.cpp)


